Add time on about.html and index.html(though not used in index.html)

--- a/about.html
+++ b/about.html
@@ -115,9 +115,20 @@
           <h1 style="padding-top:50px;padding-bottom:25px;"></h1>
           <p>
               Small hobby page that supports the backend for multiple projects and acts as a small file server, very little information is gathered from this page.
+              This site is being hosted on AWS and favicons come from <a href="https://favicomatic.com/">faviomatic.com</a>
           </p>
-
+          
+          
         </body>
     </div>
     </div>
-        <div id="bottom"><a href="/">   Home   </a></div>
+        <div id="bottom">
+          <a href="/">   Home   </span></a>
+          <span id="date-time">
+
+          </div>
+
+        <script>
+          var dt = new Date();
+          document.getElementById('date-time').innerHTML=dt;
+          </script>
