--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
               <p>
                     <a href="mailto:britishperson10@protonmail.com">Personal Email</a>
               </p>
+              <p>
+                <span id="date-time"></span>
+              </p>
         </div>
+        <!-- <script>
+          var dt = new Date();
+          document.getElementById('date-time').innerHTML=dt;
+          </script> -->
+          <!-- Moved to about -->
         </body>
     <div id="bottom"><a href="about.html">   About   |</a><a href="de/">   Deutsch(German)   |</a><a href="fr/">   Français(French)   </a></div>
