Removed AWS credit

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
           <h1 style="padding-top:50px;padding-bottom:25px;"></h1>
           <p>
               Small hobby page that supports the backend for multiple projects and acts as a small file server, very little information is gathered from this page.
-              This site is being hosted on AWS and favicons come from <a href="https://favicomatic.com/">faviomatic.com</a>
+              Favicons come from <a href="https://favicomatic.com/">faviomatic.com</a>
           </p>
           
           
