Made the resume file before doing anything with it, made a basic template, and something else I think.

--- a/de/index.html
+++ b/de/index.html
@@ -116,7 +116,7 @@
         </div>
         
               <p>
-                Willkommen auf meiner seite, unten finden sie einige links zu nützlichen informationen über mich.
+                Willkommen Auf Meiner Seite.
               </p>
         </div>
         <h1 style="padding-top:50px;padding-bottom:25px;">Links:</h1>
