--- a/misc/template.html
+++ b/misc/template.html
@@ -111,12 +111,12 @@
         <div class="page_header floating_element">
           <!-- <img src="favicon-196x196.png" alt="AAAAAAAAAAAAAAAAAh" class="floating_element"/> -->
           <span class="floating_element">
-           Joseph's Homepage
+           Template
           </span>
         </div>
         
               <p>
-                    Welcome To My Page.
+                    None of the links on here will work.
               </p>
         </div>
         <h1 style="padding-top:50px;padding-bottom:25px;">Links:</h1>
@@ -126,10 +126,7 @@
         </div>
         
               <p>
-                    <a href="https://github.com/britishperson10">Github</a>
-              </p>
-              <p>
-                    <a href="mailto:britishperson10@protonmail.com">Personal Email</a>
+                    <a href="http://penisland.net/">Link</a>
               </p>
               <p>
                 <span id="date-time"></span>
