--- a/fr/index.html
+++ b/fr/index.html
@@ -116,7 +116,7 @@
         </div>
         
               <p>
-                Bienvenue sur ma page, vous trouverez ci-dessous quelques liens vers des informations utiles me concernant.
+	      Bienvenue Sur Ma Page.
               </p>
         </div>
         <h1 style="padding-top:50px;padding-bottom:25px;">Liens:</h1>
