--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
                     <a href="mailto:britishperson10@protonmail.com">Personal Email</a>
               </p>
               <p>
+                <a href="misc/joseph.gpg">My PGP Key</a>
+              </p>
+              <p>
                 <span id="date-time"></span>
               </p>
         </div>
