Added certs, small reorganisation of directories, and removed redundant changes.txt

--- a/index.html
+++ b/index.html
@@ -127,14 +127,15 @@
         </div>
         
               <p>
-                    <a href="https://github.com/britishperson10">Github</a>
+                <a href="https://github.com/britishperson10">Github</a>
               </p>
               <p>
-                    <a href="mailto:britishperson10@protonmail.com">Personal Email</a>
+                <a href="mailto:britishperson10@protonmail.com">Personal Email</a>
               </p>
               <p>
                 <a href="misc/joseph.gpg">My PGP Key</a>
               </p>
+              <a href="files/certs/cert_A_plus.pdf">CompTIA A+ Certification</a>
               <p>
                 <span id="date-time"></span>
               </p>
