Updated index.html to have full name

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="page_header floating_element">
           <!-- <img src="favicon-196x196.png" alt="AAAAAAAAAAAAAAAAAh" class="floating_element"/> -->
           <span class="floating_element">
-           Joseph's Homepage
+           Joseph Rohani's Homepage
           </span>
         </div>
         
