Updated PGP Key

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <a href="mailto:britishperson10@protonmail.com">Personal Email</a>
               </p>
               <p>
-                <a href="misc/joseph.gpg">My PGP Key</a>
+                <a href="misc/joseph.asc">My PGP Key</a>
               </p>
               <a href="files/certs/cert_A_plus.pdf">CompTIA A+ Certification</a>
               <p>
